gcc/testsuite/g++.dg/warn/pr31246-2.C
@@ -1,0 +1,9 @@
+// PR 31246
+// { dg-do compile }
+// { dg-options "-Wunreachable-code" }
+#include <new>
+
+int* get_ptr(void* ptr)
+{
+  return new(ptr) int();
+}
